Fix containers on smaller screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,7 +135,13 @@ main.flex-center {
 }
 
 .container {
-  max-width: 50%;
+  max-width: 60%;
+}
+
+@media only screen and (max-width: 760px) {
+  .container {
+    max-width: 90%;
+  }
 }
 
 .container::after {
